--- a/myOwnFilter/myOwnFilter.vcxproj
+++ b/myOwnFilter/myOwnFilter.vcxproj
@@ -145,11 +145,9 @@
     <ClCompile Include="bmp.cpp" />
     <ClCompile Include="color.cpp" />
     <ClCompile Include="colorProcessing.cpp" />
-    <ClCompile Include="main2.cpp">
+    <ClCompile Include="main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="spatialfilter.cpp" />
-    <ClCompile Include="transform.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
