--- a/myOwnFilter/myOwnFilter.vcxproj.filters
+++ b/myOwnFilter/myOwnFilter.vcxproj.filters
@@ -26,16 +26,10 @@
     <ClCompile Include="color.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="spatialfilter.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="transform.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="colorProcessing.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="main2.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
