--- a/Project2/OpenGL 1.2.vcxproj.filters
+++ b/Project2/OpenGL 1.2.vcxproj.filters
@@ -18,9 +18,24 @@
     <ClCompile Include="main.cpp">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="triangle.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="draw.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="project2_interactivedrawing.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="draw.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="vec.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
