--- a/Project2/OpenGL 1.2.vcxproj.filters
+++ b/Project2/OpenGL 1.2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="project2_interactivedrawing.cpp">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="mydrawing.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cg.h">
